# kitchensink

./: .gitignore
component-model-experiment/: Makefile  i16array-to-mem.wat  index.mjs
component-model-experiment/wit/: world.wit
ferris-says-component/: Makefile  README.md
ferris-says-component/ferris-impl/: .gitignore  Cargo.toml
ferris-says-component/ferris-impl/src/: lib.rs
ferris-says-component/wit/: world.wit
jspi/: README.md  index.mjs  test.wat
jspi-v8/: Makefile  README.md  test.mjs  test.wat
llvm-dwarf-parser/: .gitignore  Makefile  llvm_elf_dwarf_parser.cpp
moonbit-component-model/: Makefile  README.md
moonbit-component-model/ffi/: top.mbt
scala3-cc/: capybara.scala  cc.scala
scala3/12637/: README.md  TestenumJ.java  Testme.scala  javap.md
scala3/22307/: Foo.java  Test.scala  javap.md  javap2.md  scala2javap.md
scala3/24074/: B.java  Lvl1.java  Lvl2.java  Lvl3.java  Lvl3Impl.java  Test.scala  platform.scala
scala3/24075/: B.java  JavaImpl.java  Lvl1.java  Lvl2.java  Test.java  Test.scala
scala3/24134-nested/: Main.java  test.md
sollya/: fdlibm_log.sollya
wasi-sockets-example/: .gitignore  Cargo.toml  README.md  server.py  server.scala
wasi-sockets-example/src/: lib.rs
wasi-sockets-example/wit/: world.wit
wasm-itoa/: Makefile  index.mjs  itoa.wat
wasm-malloc/: Makefile  README.md  index.mjs  malloc.wat
wasmgc-component-validation/: Makefile  README.md  plug.wat  socket.wat
wasmgc-component-validation-failed/: Cargo.toml  Makefile  README.md  socket.wat
wasmtime-illegal-instruction/: Makefile  test.wat
(+14 files in other folders)
